--- a/xpi/content/css/appbutton2wt2.css
+++ b/xpi/content/css/appbutton2wt2.css
@@ -49,9 +49,9 @@
 	  -moz-margin-start: 26px !important;
 	}
 	
-	#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="maximized"][tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
+	/*#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="maximized"][tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
 	#main-window[tabsintitlebar][sizemode="maximized"][tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
 	  -moz-margin-start: 97px;
-	}
+	}*/
 
 }
