--- a/xpi/content/css/notabbg.css
+++ b/xpi/content/css/notabbg.css
@@ -1,10 +1,7 @@
+@import url(notabfog.css);
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
-	#TabsToolbar:not(:-moz-lwtheme)::after,
-	#TabsToolbar:not(:-moz-lwtheme)::before {
-	  box-shadow: none !important;
-	}
 	#main-window[defaultfxtheme="true"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme),
 	#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme) {
 	  background: none !important;
