--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -127,6 +127,10 @@
 	#TabsToolbar:not(:-moz-lwtheme)::before {
 	  box-shadow: none !important;
 	}
+	#tabbrowser-tabs .tabbrowser-arrowscrollbox .arrowscrollbox-overflow-start-indicator,
+	#tabbrowser-tabs .tabbrowser-arrowscrollbox .arrowscrollbox-overflow-end-indicator {
+	  background-image: none !important;
+	}
 
 	.tabbrowser-tab:-moz-lwtheme {
 	  color: inherit !important;
@@ -270,14 +274,13 @@
 	  clip-path: none !important;
 	}
 	
-	/* Private Tab extension */
-	.tabs-newtab-button + .tabs-newtab-button {
-	  -moz-margin-start: 15px !important;
-	}
-	
 	/*ColorfulTabs extension*/
 	#navigator-toolbox[tabsontop="false"] #colorfulTabsStack {
 	  margin-top: -1px !important;
+	}
+	/* Private Tab extension */
+	.tabs-newtab-button + .tabs-newtab-button {
+	  -moz-margin-start: 15px !important;
 	}
 	
 }
@@ -291,7 +294,8 @@
 	.ntabhovcolorbox,
 	#ntabcolorbox,
 	#ntabhovcolorbox,
-	#ctraddon_ccap_t_squared{
+	#ctraddon_ccap_t_squared,
+	#ClassicTRoptionsPane[defaultfxtheme="true"] #ctraddon_pw_colors_ntab_t{
 	  visibility: visible !important;
 	}
 	
