--- a/xpi/content/css/appbutton2io.css
+++ b/xpi/content/css/appbutton2io.css
@@ -41,8 +41,8 @@
 	  -moz-margin-start: 0px !important;
 	}
 
-	#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="maximized"] #toolbar-menubar ~ #TabsToolbar,
-	#main-window[tabsintitlebar][sizemode="maximized"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
+	#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="maximized"]:not([tabsontop="false"]) #toolbar-menubar ~ #TabsToolbar,
+	#main-window[tabsintitlebar][sizemode="maximized"]:not([tabsontop="false"]) #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar {
 	  -moz-margin-start: 32px;
 	}
 	
@@ -69,7 +69,7 @@
 	}
 	
 	@media (-moz-os-version: windows-win7){
-	@media (-moz-windows-classic){
+	  @media (-moz-windows-classic){
 	
 		#main-window[tabsintitlebar][sizemode="normal"] #TabsToolbar .titlebar-placeholder{
 		  visibility:collapse !important;
@@ -79,6 +79,7 @@
 		  margin-top: 16px !important;
 		}
 	
-	}}
+	  }
+	}
 
 }
