--- a/xpi/content/css/mac/tabsontop_offextra.css
+++ b/xpi/content/css/mac/tabsontop_offextra.css
@@ -6,10 +6,11 @@
 	  padding-top: 0px !important;
 	  padding-bottom: 24px !important;
 	}
-	#main-window[inFullscreen] #nav-bar {
+
+	/*#main-window[inFullscreen]:not(:-moz-lwtheme) #nav-bar {
 	  margin-top:-10px !important;
-	}
-	
+	}*/
+
 	#main-window:not([tabsintitlebar])[sizemode="normal"]  #TabsToolbar,
 	#main-window[tabsintitlebar][sizemode="normal"]  #TabsToolbar{
 	  margin-left: 0px !important;
@@ -42,12 +43,14 @@
 	  background-image: linear-gradient(to bottom, #eeeeee, #d6d6d6, #d2d2d2) !important;
 	}
 	
-	/* removes ugly backgrounds added for lw themes, but not need in tabs not on top mode */
 	#main-window[tabsontop="false"]:-moz-lwtheme #navigator-toolbox toolbar {
 	  background:none !important
 	}
-	#main-window[tabsontop="false"]:-moz-lwtheme #titlebar {
+	/*#main-window[tabsontop="false"]:-moz-lwtheme #titlebar {
 	  padding-bottom:0px !important;
 	}
+	#main-window[tabsintitlebar][tabsontop="false"][sizemode="normal"]:-moz-lwtheme #titlebar {
+	  margin-bottom:-14px !important;
+	}*/
 	
 }
