--- a/xpi/content/css/winaero/classictabsextra.css
+++ b/xpi/content/css/winaero/classictabsextra.css
@@ -44,11 +44,25 @@
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
 	  -moz-padding-start: 0px !important;
 	}
-	.tabs-newtab-button{
-	  -moz-margin-end: 0px !important; /*-15px*/
+	
+	@media not all and (-moz-windows-classic) {
+	
+		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button{
+		  -moz-margin-end: 0px !important;
+		}
+		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
+		  -moz-margin-end: -15px !important;
+		}
+	
 	}
-	#TabsToolbar:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
+
+	#TabsToolbar[currentset*="tabbrowser-tabs,search-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]),
+	#TabsToolbar[currentset*="tabbrowser-tabs,urlbar-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
 	  -moz-margin-end: -15px !important;
+	}
+
+	#titlebar-placeholder-on-TabsToolbar-for-captions-buttons{
+	  -moz-margin-start: 0px !important;
 	}
 	
 	/* TU workaround */
@@ -139,11 +153,11 @@
 		  background-image: linear-gradient(to top, rgba(10%,10%,10%,.4) 1px, transparent 1px), linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
 							linear-gradient(-moz-dialog, -moz-dialog) !important;
 		}
-		
+
 		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
 		  background-size: 100% 100% !important;
 		}
-		
+
 		.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]) {
 		  background-image: radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
@@ -151,7 +165,7 @@
 		  background-image: linear-gradient(hsla(0,0%,100%,.4), hsla(0,0%,75%,.4) 80%),
 							radial-gradient(circle farthest-corner at 50% 3px, rgba(255,255,255,1) 3%, rgba(186,221,251,.75) 40%, rgba(127,179,255,.5) 80%, rgba(127,179,255,.25)) !important;
 		}
-		
+
 		.tabs-newtab-button:not(:-moz-lwtheme),
 		#TabsToolbar > #new-tab-button:not(:-moz-lwtheme) {
 		  list-style-image: url(chrome://browser/skin/tabbrowser/newtab.png) !important;
