--- a/xpi/content/css/winaero/curvedtabsextra.css
+++ b/xpi/content/css/winaero/curvedtabsextra.css
@@ -1,6 +1,10 @@
 @namespace url(http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul);
 
 @-moz-document url(chrome://browser/content/browser.xul){
+
+	#titlebar-placeholder-on-TabsToolbar-for-captions-buttons{
+	  -moz-margin-start: 0px !important;
+	}
 	
 	@media all and (-moz-windows-theme:aero) {
 
