--- a/xpi/content/css/winxp/classictabsextra2.css
+++ b/xpi/content/css/winxp/classictabsextra2.css
@@ -44,11 +44,25 @@
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
 	  -moz-padding-start: 0px !important;
 	}
-	.tabs-newtab-button{
-	  -moz-margin-end: 0px !important; /*-15px*/
+
+	@media not all and (-moz-windows-classic) {
+	
+		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) .tabs-newtab-button{
+		  -moz-margin-end: 0px !important;
+		}
+		#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
+		  -moz-margin-end: -15px !important;
+		}
+	
 	}
-	#TabsToolbar:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
+	
+	#TabsToolbar[currentset*="tabbrowser-tabs,search-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]),
+	#TabsToolbar[currentset*="tabbrowser-tabs,urlbar-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
 	  -moz-margin-end: -15px !important;
+	}
+
+	#titlebar-placeholder-on-TabsToolbar-for-captions-buttons{
+	  -moz-margin-start: 0px !important;
 	}
 
 	/* TU workaround */
