--- a/xpi/content/css/cuibuttons.css
+++ b/xpi/content/css/cuibuttons.css
@@ -84,4 +84,10 @@
 	  border-bottom: 1px solid #89b3d4 !important;
 	}
 	
+#customization-palette-container #ctraddon_cuibuttonsbox .customizationmode-button {
+	padding:0 !important;
+	margin-top:0 !important;
+	margin-bottom:0 !important;
+}
+	
 }
