--- a/xpi/content/css/tabs_squared.css
+++ b/xpi/content/css/tabs_squared.css
@@ -282,6 +282,11 @@
 	.tabs-newtab-button + .tabs-newtab-button {
 	  -moz-margin-start: 15px !important;
 	}
+	/* TMP progress tweak */
+	.tabbrowser-tab progressmeter.tab-progress	{
+	  margin-top: 2.5px !important;
+	  height: 3px !important;
+	}
 	
 }
 
