--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -126,6 +126,25 @@
 	  -moz-box-align: center !important;
 	}
 	
+	#main-window[defaultfxtheme="true"] #urlbar{
+	  border: 1px solid !important;
+	  border-color: #626262 #787878 #8c8c8c !important;
+	}
+	@media (-moz-mac-lion-theme) {
+	  #main-window[defaultfxtheme="true"] #urlbar {
+		border-color: hsla(0,0%,0%,.35) hsla(0,0%,0%,.25) hsla(0,0%,0%,.15) !important;
+	  }
+	}
+	@media not all and (-moz-mac-lion-theme) {
+	  #main-window[defaultfxtheme="true"] #urlbar:-moz-window-inactive {
+		border-color: rgba(146, 146, 146, 0.84) !important;
+	  }
+	}
+	
+	#main-window[defaultfxtheme="true"] #urlbar[focused]{
+	  border-color: -moz-mac-focusring !important;
+	}
+	
 	#nav-bar #ctraddon_puib_separator{
 	  margin-top: 2px !important;
 	  margin-bottom: 2px !important;
