--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -68,17 +68,21 @@
 	  margin: -4px !important;
 	}
 	
-	/* support for star button in urlbar */
+	/* support for star & feed buttons in urlbar */
+	#nav-bar #urlbar-container #feed-button .toolbarbutton-text,
 	#nav-bar #urlbar-container #bookmarks-menu-button .toolbarbutton-text {
 	  display: none !important;
 	  visibility: collapse !important;
 	}
+	#navigator-toolbox  #nav-bar #urlbar-container #feed-button:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-icon,
 	#navigator-toolbox  #nav-bar #urlbar-container #bookmarks-menu-button:not(.tabs-newtab-button):not(.tab-close-button) .toolbarbutton-icon {
 	  visibility: visible !important;
 	}
+	#nav-bar #urlbar-container #feed-button,
 	#nav-bar #urlbar-container #bookmarks-menu-button {
 	  min-width: inherit !important;
 	}
+	#nav-bar #urlbar-container #feed-button:hover,
 	#nav-bar #urlbar-container #bookmarks-menu-button:hover{
 	  border: 0px solid transparent !important;
       background-image: linear-gradient(hsla(0,0%,100%,.0), hsla(0,0%,100%,.0)) !important;
@@ -86,6 +90,7 @@
       box-shadow: none !important;
 	  padding:0 !important;
 	}
+	#nav-bar #urlbar-container #feed-button .toolbarbutton-icon,
 	#nav-bar #urlbar-container #bookmarks-menu-button .toolbarbutton-icon {
 	  margin: -8px 4px !important;
 	}
