--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -93,7 +93,7 @@
 	
 	.tabbrowser-tab .tab-stack {
 	  -moz-appearance: none !important;
-	  margin-top: -0px !important;
+	  margin-top: 0px !important;
 	  margin-bottom: -1px !important;
 	}
 	
@@ -159,12 +159,14 @@
       border-style: solid !important;
     }
 
-	.tabs-newtab-button{
+	.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabs-newtab-button:-moz-lwtheme{
 	  border-width: 1px 3px 3px !important;
 	  border-style: solid !important;
 	  border-image: url(chrome://classic_theme_restorer/content/images/tab_empty.png) 0 3 1 fill repeat stretch !important;	
 	}
-	.tabs-newtab-button:hover{
+	.tabs-newtab-button:hover:not(:-moz-lwtheme),
+	.tabs-newtab-button:hover:-moz-lwtheme{
 	  border-width: 1px 3px 3px !important;
 	  border-style: solid !important;
 	  border-image: url(chrome://classic_theme_restorer/content/images/tab-r.png) 0 3 1 fill repeat stretch !important;	
@@ -197,6 +199,7 @@
 	.tabbrowser-tab:not([selected="true"])[pinned]:-moz-lwtheme {
 		background:none !important;
 	}
+
 
 
 	.tabbrowser-tab[selected="true"]:-moz-lwtheme,
@@ -243,6 +246,10 @@
 	#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme){
 	  background: linear-gradient(to bottom,#5e5e5e 1px,#898989,#939393,#989898,#a1a1a1 1px) !important;
 	  border-bottom: 1px solid #6f6f6f !important;
+	}
+	#main-window[defaultfxtheme="true"][tabsontop="false"] #navigator-toolbox #TabsToolbar:-moz-lwtheme{
+	  background: linear-gradient(to bottom,transparent 1px,transparent,transparent,transparent,transparent 1px) !important;
+	  border-bottom: 1px solid transparent !important;
 	}
 	
 	#main-window[defaultfxtheme="true"][tabsontop="false"]:-moz-window-inactive #navigator-toolbox #TabsToolbar:not(:-moz-lwtheme) {
